# rocket-blog-example

./: .gitignore  Cargo.toml  Rocket.toml  db.sqlite
db/: db.sqlite
migrations/2019-12-05-123132_create_post_table/: up.sql
src/: db.rs  main.rs  routes.rs  schema.rs
src/models/: post.rs  posts.rs
src/routes/: authorize.rs  contents.rs  error.rs  mod.rs
static/: header.css
templates/base/: index.html.hbs  layout.html.hbs  nav.html.hbs  posts.html.hbs  title.html.hbs
templates/error/: 404.html.hbs
