[package]
name = "rocket_sample"
version = "0.1.0"
authors = ["yoshi-yukki <sioazinori@hotmail.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
diesel = { version = "*", features = ["sqlite", "r2d2"] }
diesel_migrations = "*"
dotenv = "*"
log = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates", "diesel_sqlite_pool", "serve"]